--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "construx-star",
+  "name": "construx-makara-i18n-bundle",
   "version": "0.0.1",
-  "description": "star compiler plugin for construx",
+  "description": "makara-i18n-bundle compiler plugin for construx",
   "main": "index.js",
   "scripts": {
     "test": "tap test/*.js",
@@ -10,7 +10,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/krakenjs/construx-star.git"
+    "url": "git+https://github.com/krakenjs/construx-makara-i18n-bundle.git"
   },
   "keywords": [
     "krakenjs",
@@ -18,7 +18,10 @@
     "construx",
     "less"
   ],
-  "author": "star",
+  "author": "Matt Edelman <medelman@paypal.com>",
+  "contributors": [
+    "Aria Stewart <ariastewart@paypal.com>"
+  ]
   "license": [
     {
       "type": "Apache 2.0",
@@ -26,12 +29,19 @@
     }
   ],
   "bugs": {
-    "url": "https://github.com/krakenjs/construx-star/issues"
+    "url": "https://github.com/krakenjs/construx-makara-i18n-bundle/issues"
   },
-  "homepage": "https://github.com/krakenjs/construx-star#readme",
+  "homepage": "https://github.com/krakenjs/construx-makara-i18n-bundle#readme",
   "devDependencies": {
     "jshint": "~2.4.3",
     "nyc": "^2.3.0",
     "tap": "^1.2.1"
+  },
+  "dependencies": {
+    "browserify": "^10.2.6",
+    "iferr": "^0.1.5",
+    "spundle": "^1.0.3",
+    "stream": "0.0.2",
+    "through": "^2.3.8"
   }
 }
