name changing to construx-makara-browserify

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "construx-makara-i18n-bundle",
+  "name": "construx-makara-browserify",
   "version": "0.0.1",
-  "description": "makara-i18n-bundle compiler plugin for construx",
+  "description": "makara-browserify compiler plugin for construx",
   "main": "index.js",
   "scripts": {
     "test": "tap test/*.js",
@@ -10,7 +10,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/krakenjs/construx-makara-i18n-bundle.git"
+    "url": "git+https://github.com/krakenjs/construx-makara-browserify.git"
   },
   "keywords": [
     "krakenjs",
@@ -29,9 +29,9 @@
     }
   ],
   "bugs": {
-    "url": "https://github.com/krakenjs/construx-makara-i18n-bundle/issues"
+    "url": "https://github.com/krakenjs/construx-makara-browserify/issues"
   },
-  "homepage": "https://github.com/krakenjs/construx-makara-i18n-bundle#readme",
+  "homepage": "https://github.com/krakenjs/construx-makara-browserify#readme",
   "devDependencies": {
     "jshint": "~2.4.3",
     "nyc": "^2.3.0",
